Delete first template post

--- a/404.html
+++ b/404.html
@@ -13,7 +13,7 @@
 <meta property="og:url" content="/404.html" />
 <meta property="og:site_name" content="Le blog de Nicolas, tout simplement." />
 <script type="application/ld+json">
-{"url":"/404.html","description":"A travers ce blog, un Architecte Java et Responsable Java de Developpez.com vous trace ses problèmes, ses idées, son quotidien d’informaticien.","headline":"Le blog de Nicolas, tout simplement.","@type":"WebPage","@context":"http://schema.org"}</script>
+{"url":"/404.html","headline":"Le blog de Nicolas, tout simplement.","description":"A travers ce blog, un Architecte Java et Responsable Java de Developpez.com vous trace ses problèmes, ses idées, son quotidien d’informaticien.","@type":"WebPage","@context":"http://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 <link rel="stylesheet" href="/assets/main.css"><link type="application/atom+xml" rel="alternate" href="/feed.xml" title="Le blog de Nicolas, tout simplement." /></head>
 <body><header class="site-header" role="banner">
