--- a/about/index.html
+++ b/about/index.html
@@ -13,7 +13,7 @@
 <meta property="og:url" content="/about/" />
 <meta property="og:site_name" content="Le blog de Nicolas, tout simplement." />
 <script type="application/ld+json">
-{"url":"/about/","name":"Le blog de Nicolas, tout simplement.","description":"A travers ce blog, un Architecte Java et Responsable Java de Developpez.com vous trace ses problèmes, ses idées, son quotidien d’informaticien.","headline":"A propos","@type":"WebSite","@context":"http://schema.org"}</script>
+{"url":"/about/","name":"Le blog de Nicolas, tout simplement.","headline":"A propos","description":"A travers ce blog, un Architecte Java et Responsable Java de Developpez.com vous trace ses problèmes, ses idées, son quotidien d’informaticien.","@type":"WebSite","@context":"http://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 <link rel="stylesheet" href="/assets/main.css"><link type="application/atom+xml" rel="alternate" href="/feed.xml" title="Le blog de Nicolas, tout simplement." /></head>
 <body><header class="site-header" role="banner">
